# Blockchain_project

./: CMakeLists.txt  README.md
src/: functions.cpp  functions.h  main.cpp  main.h
src/classes/Block/: Block.cpp  Block.h
src/classes/Blockchain/: Blockchain.cpp  Blockchain.h
src/classes/Header/: Header.cpp  Header.h
src/classes/Transaction/: Transaction.cpp  Transaction.h
src/classes/User/: User.cpp  User.h
vendors/SHA-256/: sha256.cpp  sha256.h
vendors/ZA-256/: README.md  ZA256.h
